# llm-book-recommender

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  build_vector_db.py  gradio-dashboard.py  pyproject.toml  requirements-dev.txt  requirements-gemini.txt  requirements.txt  tagged_description.txt  vector-search.ipynb
.github/workflows/: ci.yml
chroma_db/31fc9936-9748-45f2-9fae-6a4de7cb651e/: index_metadata.pickle
data/: bad_authors.csv  dynamic_books_cache.db  test_cache.db
docs/: google-books-dynamic-module-raporu.md
modules/: __init__.py  book_cache.py  book_normalizer.py  category_mapping.json  category_mapping.py  cleanup_no_author.py  config.py  db_status.py  embeddings_utils.py  google_books_client.py  hybrid_recommender.py  persistence.py  query_rewriter.py  test_fetch.py  test_query_rewriter.py  types.py  vector_ingester.py
scripts/: build_category_mapping.py
